# frame-project-cli

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yaml  tests.yaml
docs/: conf.py  index.md
docs/_static/: custom.css
docs/src/developer/: developer_guide.md
docs/src/user/: adding_units.md  getting_units.md  quick_start.md  tool_management.md  user_guide.md
frame_cli/: __init__.py  check.py  config.py  info.py  init.py  listing.py  logging.py  main.py  metadata.py  pull.py  push.py  show.py  utils.py
frame_cli/downloaders/: downloader.py  git.py  hydroshare.py  zenodo.py
frame_cli/environment_managers/: conda.py  environment_manager.py  julia.py  python.py  python_requirements.py
tests/: test_dummy.py  test_environment_managers.py
