[tool.poetry]
name = "frame-cli"
version = "0.0.0"
description = "Command line interface for managing Frame hybrid models"
authors = [
	"Son Pham-Ba <son.phamba@epfl.ch>",
]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "frame_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
build = {version = "^1.2.2.post1", optional = true}
pre-commit = {version = "^3.0.4", optional = true}
pytest = {version = "^8.1.1", optional = true}
pytest-cov = {version = "^5.0.0", optional = true}
gitpython = "^3.1.43"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
rich = "^13.9.3"
typer = "^0.15.1"

[tool.poetry.extras]
dev = [
	"build",
    "pre-commit",
	"pytest",
	"pytest-cov"
]
test = [
	"pytest",
	"pytest-cov",
]

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = [
	"frame_cli/__init__.py",
]

[tool.poetry.scripts]
frame-cli = "frame_cli.main:app"

[tool.pytest.ini_options]
addopts = "--cov=frame_cli --cov-report term-missing --cov-report xml --cov-report lcov:lcov.info"
testpaths = [
    "tests",
]

[tool.black]
line-length = 120
preview = true

[tool.isort]
line_length = 120
profile = "black"

[tool.codespell]
skip = 'poetry.lock'
